--- a/New.html
+++ b/New.html
@@ -1,9 +1,11 @@
 <html>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
-<script src="/soap/ajax/53.0/connection.js" type="text/javascript"></script>
+<!--<script src="/soap/ajax/53.0/connection.js" type="text/javascript"></script>-->
 <script src="/soap/ajax/53.0/apex.js" type="text/javascript"></script>
     
 <script type='text/javascript'>
+    
+    {!requireScript("/soap/ajax/53.0/connection.js")}
 
     //function to fetch JWT token
     function fetchToken() {
