--- a/New.html
+++ b/New.html
@@ -1,6 +1,6 @@
 <html>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
-<!--<script src="/soap/ajax/53.0/connection.js" type="text/javascript"></script>-->
+<script src="/soap/ajax/53.0/connection.js" type="text/javascript"></script>
 <script src="/soap/ajax/53.0/apex.js" type="text/javascript"></script>
     
 <script type='text/javascript'>
@@ -33,7 +33,7 @@
         document.getElementsByTagName('head')[0].appendChild(se); 
         //alert("end of loadScript\n");
     }
-    loadScript("/soap/ajax/53.0/connection.js");
+    //loadScript("/soap/ajax/53.0/connection.js");
 
                     
     var initESW = function(gslbBaseURL) {
