--- a/New.html
+++ b/New.html
@@ -68,6 +68,7 @@
                         e.preventDefault();
                         console.log('Email Transcript Clicked');
                         var emailTranscript = true;
+                        {!requireScript("/soap/ajax/53.0/connection.js")}
                         sforce.connection.sessionId = '{!$Api.Session_ID}';
                         console.log(sforce.connection.sessionId);
                         var test = sforce.apex.execute("CheckEmailTranscript","checkEmailTranscript",{chatkey: data.liveAgentSessionKey});
@@ -93,6 +94,7 @@
                     btn.addEventListener("click", function (e){
                         e.preventDefault();
                         console.log('Email Transcript Clicked');
+                        {!requireScript("/soap/ajax/53.0/connection.js")}
                         sforce.connection.sessionId = '{!$Api.Session_ID}';
                         console.log(sforce.connection.sessionId);
                         var test = sforce.apex.execute("CheckEmailTranscript","checkEmailTranscript",{chatkey: data.liveAgentSessionKey});
