--- a/New.html
+++ b/New.html
@@ -68,7 +68,8 @@
                         e.preventDefault();
                         console.log('Email Transcript Clicked');
                         var emailTranscript = true;
-                        {!require("/soap/ajax/53.0/connection.js")}
+                        {!REQUIRESCRIPT("https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")}
+                        {!REQUIRESCRIPT("/soap/ajax/53.0/connection.js")}
                         sforce.connection.sessionId = '{!$Api.Session_ID}';
                         console.log(sforce.connection.sessionId);
                         var test = sforce.apex.execute("CheckEmailTranscript","checkEmailTranscript",{chatkey: data.liveAgentSessionKey});
@@ -94,7 +95,8 @@
                     btn.addEventListener("click", function (e){
                         e.preventDefault();
                         console.log('Email Transcript Clicked');
-                        {!require("/soap/ajax/53.0/connection.js")}
+                        {!REQUIRESCRIPT("https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")}
+                        {!REQUIRESCRIPT("/soap/ajax/53.0/connection.js")}
                         sforce.connection.sessionId = '{!$Api.Session_ID}';
                         console.log(sforce.connection.sessionId);
                         var test = sforce.apex.execute("CheckEmailTranscript","checkEmailTranscript",{chatkey: data.liveAgentSessionKey});
