--- a/New.html
+++ b/New.html
@@ -1,7 +1,7 @@
 <html>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
-<script src="/soap/ajax/53.0/connection.js" type="text/javascript"></script>
-<script src="/soap/ajax/53.0/apex.js" type="text/javascript"></script>
+<script src="https://blueshieldca--itdevq4--c.visualforce.com/soap/ajax/53.0/connection.js" type="text/javascript"></script>
+<script src="https://blueshieldca--itdevq4--c.visualforce.com/soap/ajax/53.0/apex.js" type="text/javascript"></script>
     
 <script type='text/javascript'>
 
