--- a/New.html
+++ b/New.html
@@ -1,6 +1,6 @@
 <html>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jsforce/1.9.1/jsforce.min.js"></script>
+<script type='text/javascript' src="//cdnjs.cloudflare.com/ajax/libs/jsforce/1.9.1/jsforce.min.js"></script>
 <script type='text/javascript'>
 
     //function to fetch JWT token
